--- a/css/main.css
+++ b/css/main.css
@@ -2229,12 +2229,61 @@ html[dir='ltr'] .nav-foot-link:hover, html[dir='ltr'] .nav-foot-link:focus {
   }
 }
 
-html[lang=en-US] .copyright img {
+html[dir='ltr'] .copyright img {
   margin-left: 6px;
 }
 
-html[lang=ar] .copyright img {
+html[dir='rtl'] .copyright img {
   margin-right: 6px;
+}
+
+.arr-top {
+  display: none;
+  position: fixed;
+  bottom: 100px;
+  z-index: 99;
+}
+
+@media (max-width: 767px) {
+  .arr-top {
+    bottom: 75px;
+  }
+}
+
+html[dir='ltr'] .arr-top {
+  left: 25px;
+}
+
+html[dir='rtl'] .arr-top {
+  right: 25px;
+}
+
+.arr-top span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  color: #8e2528;
+  font-size: 14px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.arr-top span:hover {
+  color: #fff;
+  background-color: #8e2528;
 }
 
 .menu-cont {
@@ -2329,6 +2378,7 @@ html[dir='rtl'] nav .menu-close {
     background-color: rgba(0, 0, 0, 0.5);
     border: none;
     display: none;
+    z-index: 999;
   }
   nav .container {
     padding: 0;
